# osmosmjerka

./: .env  .env.example  .gitignore  ALGORITHM.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  Jenkinsfile  Jenkinsfile.preview  Jenkinsfile.promotion  NOTICE  README.md  osmosmjerka-deployment.yaml  osmosmjerka-deployment.yaml.example  pyproject.toml  renovate.json  start-dev-env-watch.sh  wordsearch-deployment.yaml
.githooks/: pre-commit  pre-push
.github/: VALIDATION.md
.github/scripts/: test_validation.sh  validate_format.py
.github/workflows/: ci-pipeline.yml  ci.yml  validate-format.yml
backend/: .flake8  __init__.py  alembic.ini  app.py  auth.py  db.py  dev-requirements.txt  pyproject.toml  requirements.txt  utils.py  wordsearch.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_drop_arcade_scoring.py  a7b8c9d0e1f2_add_user_streaks.py  b2f1c0d4e5a6_consolidate_phrases_single_table.py  b8c9d0e1f2a3_rename_streak_bonus.py  c3a7e9d1f2b8_drop_legacy_phrase_tables.py  c9d0e1f2a3b4_add_language_set_target_lang.py  d0e1f2a3b4c5_add_server_defaults.py  d4e8b1a9c7f3_json_text_to_jsonb.py  e5f9c2a1b6d4_zero_hint_penalty.py  f1a2b3c4d5e6_add_user_word_mastery.py  fae66ffa8bec_initial_schema_baseline.py
backend/osmosmjerka/: __init__.py  admin_api.py  app.py  auth.py  cache.py  database.py  db.py  game_api.py  grid_generator.py  logging_config.py  scoring_rules.py  srs.py  streak.py  utils.py  wordsearch.py
backend/osmosmjerka/admin_api/: __init__.py  batch_operations.py  groups.py  language_sets.py  notifications.py  phrases.py  schemas.py  settings.py  statistics.py  teacher_sets.py  users.py
backend/osmosmjerka/database/: __init__.py  accounts.py  base.py  game_sessions.py  groups.py  language_sets.py  list_sharing.py  manager.py  models.py  notifications.py  phrases.py  private_lists.py  scoring.py  statistics.py  streak_ops.py  teacher_access.py  teacher_sessions.py  teacher_sets.py  user_preferences.py  word_mastery.py
backend/osmosmjerka/game_api/: __init__.py  changelog.py  export.py  game_sessions.py  helpers.py  learn.py  list_sharing.py  phrases.py  private_lists.py  schemas.py  scoring.py  student_groups.py  student_study.py  system_flags.py  user_preferences.py
backend/osmosmjerka/grid_generator/: __init__.py  crossword_generator.py  placement.py  scoring.py  utils.py
backend/osmosmjerka/grid_generator/crossword/: __init__.py  generator.py
backend/osmosmjerka/grid_generator/shared/: __init__.py  normalization.py  utils.py
backend/osmosmjerka/grid_generator/word_search/: __init__.py  generator.py  placement.py  scoring.py
backend/osmosmjerka/migrations/: __init__.py  add_game_type.py
backend/tests/: conftest.py  test_admin_api.py  test_app.py  test_auth.py  test_cache.py  test_changelog.py  test_crossword_generator.py  test_crossword_helpers.py  test_crossword_validation.py  test_database.py  test_game_api.py  test_grid_generator.py  test_groups.py  test_learn_api.py  test_logging_config.py  test_notifications.py  test_private_lists.py  test_private_lists_api.py  test_settings.py  test_srs.py  test_statistics.py  test_streak.py  test_student_assignment.py  test_student_groups.py  test_student_study.py  test_teacher_enhancements.py  test_teacher_mode_e2e.py  test_teacher_sets.py  test_utils.py
docs/: learning-modes-design.md
example/: words.db  words.txt
frontend/: babel.config.cjs  babel.config.js  eslint.config.js  index.html  jest.setup.js  package-lock.json  package.json  vite.config.js  vite.config.mjs
frontend/e2e/: .gitignore  playwright.config.js
frontend/e2e/tests/: crossword.spec.js  demo-account.spec.js  helpers.js  my-study-review-sprint.spec.js  wordsearch.spec.js
frontend/src/: App.css  App.jsx  GameView.jsx  i18n.js  index.jsx  style.css  testUtils.js  theme.js  version.js
frontend/src/__mocks__/: version.js
frontend/src/__tests__/: App.test.jsx
frontend/src/components/: AdminControls.jsx  AdminPanel.css  AdminPanel.jsx  AllFoundMessage.jsx  CategorySelector.jsx  ExportButton.jsx  ExportModal.jsx  GameControls.jsx  GameHeader.jsx  Grid.css  Grid.jsx  LanguageSwitcher.jsx  LoadingOverlay.jsx  NightModeButton.jsx  UploadForm.jsx  UserManagement.jsx  UserProfile.jsx  WordList.css  WordList.jsx
frontend/src/components/AdminPanel/: AdminPanel.jsx  AdminTable.jsx  EditRowForm.jsx  PaginationControls.jsx  UserManagement.jsx  UserProfile.jsx  adminTableUtils.js  useAdminApi.js
frontend/src/components/Grid/: Grid.css  Grid.jsx  GridCell.jsx  helpers.js
frontend/src/components/__tests__/: CategorySelector.test.jsx  ExportButton.test.jsx  UploadForm.test.jsx  WordList.test.jsx
frontend/src/components/common/: AdminButton.jsx  AdminLayout.jsx  GameActionButton.jsx  ResponsiveActionButton.jsx  ResponsiveText.jsx
frontend/src/config/: constants.js
frontend/src/contexts/: ThemeContext.jsx
frontend/src/features/: index.js
frontend/src/features/game/: index.js
frontend/src/features/lists/: index.js
frontend/src/features/teacher/: index.js
frontend/src/helpers/: appHelpers.js
frontend/src/hooks/: localTts.js  useAuth.js  useCategories.js  useCelebration.js  useDebounce.js  useGameDifficulties.js  useGameSession.js  useGridTooSmall.js  useLocalTts.js  useLogoColor.js  useMasteryStats.js  useReviewSprint.js  useScoring.js  useScreenTooSmall.js  useSpeech.js  useSplash.js  useSystemPreferences.js  useTouchDevice.js  useTraining.js  useWhatsNew.js
frontend/src/hooks/__tests__/: localTts.test.js  useLocalTts.test.js  useReviewSprint.test.js  useSpeech.test.js  useTraining.test.js
frontend/src/locales/: en.json  hr.json  pl.json
frontend/src/shared/: index.js
frontend/src/shared/components/: index.js
frontend/src/shared/constants/: constants.js
frontend/src/shared/utils/: assets.js  errorHandlers.js  logger.js  (+2 more)
frontend/src/styles/: constants.js  index.js  utilities.css  variables.css
frontend/src/utils/: categoriesApi.js  responsive.js  scoringUtils.js
helpers/: k8s-postgres.yaml
helpers/e2e/: README.md  run-e2e.sh  seed.py
helpers/preview/: README.md  preview-env.sh
(+218 files in other folders)
