[project]
name = "osmosmjerka"
version = "1.29.1"
description = "Web-based word search game for learning foreign languages"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.3.0",
    "fastapi==0.116.1",
    "passlib[bcrypt]==1.7.4",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.35.0",
    "reportlab==4.4.3",
    "pillow==11.3.0",
    "asyncpg==0.30.0",
    "databases[postgresql]==0.9.0",
    "sqlalchemy==2.0.43",
    "psycopg2-binary==2.9.10"
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "flake8==7.3.0",
    "isort==6.0.1",
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
    "pytest-asyncio==1.1.0",
    "pytest-env==1.1.5",
    "httpx==0.28.1",
    "python-semantic-release==10.2.0",
    "setuptools_scm==8.3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend", "backend.*"]
exclude = ["backend.tests", "backend.tests.*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["backend/tests", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.black]
line-length = 120
preview = true
include = "\\.py$"
target-version = ["py312"]
exclude = "(\\.git|\\.hg|\\.mypy_cache|\\.tox|\\.venv|_build|buck-out|build|dist|node_modules|venv|__pycache__)"

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.semantic_release]
branch = "main"
changelog_file = ""
commit_parser = "conventional"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "frontend/package.json:version"
]

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat", "feature"]
patch_tags = ["fix", "bugfix", "improvement", "enhancement", "patch", "chore"]
allowed_tags = ["feat", "feature", "fix", "bugfix", "improvement", "enhancement", "patch", "chore", "noissue", "docs", "style", "refactor", "perf", "test", "ci"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true
