[project]
name = "osmosmjerka"
version = "1.34.0"
description = "Web-based word search game for learning foreign languages"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==5.0.0",
    "fastapi==0.119.0",
    "passlib[bcrypt]==1.7.4",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.38.0",
    "reportlab==4.4.4",
    "pillow==12.0.0",
    "asyncpg==0.30.0",
    "databases[postgresql]==0.9.0",
    "sqlalchemy==2.0.44",
    "psycopg2-binary==2.9.11"
]

[project.optional-dependencies]
dev = [
    "black==25.9.0",
    "flake8==7.3.0",
    "isort==7.0.0",
    "pytest==8.4.2",
    "pytest-mock==3.15.1",
    "pytest-asyncio==1.2.0",
    "pytest-env==1.2.0",
    "httpx==0.28.1",
    "python-semantic-release==10.4.1",
    "setuptools_scm==9.2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend", "backend.*"]
exclude = ["backend.tests", "backend.tests.*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["backend/tests", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.black]
line-length = 120
preview = true
include = "\\.py$"
target-version = ["py312"]
exclude = "(\\.git|\\.hg|\\.mypy_cache|\\.tox|\\.venv|_build|buck-out|build|dist|node_modules|venv|__pycache__)"

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.semantic_release]
branch = "main"
changelog_file = ""
commit_parser = "conventional"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "frontend/package.json:version"
]

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat", "feature"]
patch_tags = ["fix", "bugfix", "bug", "improvement", "enhancement", "patch", "chore", "renovate"]
allowed_tags = ["feat", "feature", "fix", "bugfix", "bug", "improvement", "enhancement", "patch", "chore", "noissue", "docs", "style", "refactor", "perf", "test", "ci", "renovate"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true
