[project]
name = "osmosmjerka"
version = "1.37.0"
description = "Web-based word search game for learning foreign languages"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==5.0.0",
    "fastapi==0.127.0",
    "passlib[bcrypt]==1.7.4",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.21",
    "uvicorn[standard]==0.40.0",
    "reportlab==4.4.7",
    "pillow==12.0.0",
    "asyncpg==0.31.0",
    "databases[postgresql]==0.9.0",
    "sqlalchemy==2.0.45",
    "psycopg2-binary==2.9.11"
]

[project.optional-dependencies]
dev = [

    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pytest-asyncio==1.3.0",
    "pytest-env==1.2.0",
    "httpx==0.28.1",
    "python-semantic-release==10.5.3",
    "setuptools_scm==9.2.2",
    "ruff==0.8.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend", "backend.*"]
exclude = ["backend.tests", "backend.tests.*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["backend/tests", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]


[tool.semantic_release]
branch = "main"
changelog_file = ""
commit_parser = "conventional"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "frontend/package.json:version"
]

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat", "feature"]
patch_tags = ["fix", "bugfix", "bug", "improvement", "enhancement", "patch", "chore", "renovate", "refactor"]
allowed_tags = ["feat", "feature", "fix", "bugfix", "bug", "improvement", "enhancement", "patch", "chore", "noissue", "docs", "style", "refactor", "perf", "test", "ci", "renovate"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true
